[package]
name = "ssd-vectune"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.86"
bit-set = "0.5.3"
bit-vec = "0.6.3"
bytemuck = "1.15.0"
bytesize = "1.3.0"
clap = { version = "4.5.4", features = ["derive"] }
ext-sort = "0.1.4"
indicatif = "0.17.8"
itertools = "0.13.0"
memmap2 = "0.9.4"
rand = { version = "0.8", features = ["small_rng"] }
rayon = "1.10.0"
serde = { version = "1.0", features = ["derive"] }
# vectune = {version = "0.1.1", features = []}
vectune = {git = "https://github.com/ClankPan/Vectune", rev = "8d5145e6d13a5fd8182953d2496c885c4abe476b", features = ["progress-bar", "wasm-bindgen"]}
# vectune = {path = "../vectune", features = ["progress-bar"]}
serde_json = "1.0"
parking_lot = {version = "0.11.2", features = ["wasm-bindgen"]}  # 0.12にすると、wasm-bindgenのfeatがなくなる。
rustc-hash = "1.1.0"
byteorder = "1.5.0"
kd-tree = "0.6.0"
ndarray = "0.15.6"

[features]
simd = []
size = []
wasm_bindgen = ["parking_lot/wasm-bindgen", "vectune/wasm-bindgen"]