[package]
name = "ssd-vectune"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "=1.0.86"
bit-set = "=0.5.3"
bit-vec = "=0.6.3"
bytemuck = "~1.16.2"
bytesize = "=1.3.0"
clap = { version = "~4.5.4", features = ["derive"] }
ext-sort = "=0.1.4"
indicatif = "=0.17.8"
itertools = "=0.13.0"
memmap2 = "=0.9.4"
rand = { version = "=0.8.5", features = ["small_rng"] }
rayon = "=1.10.0"
serde = { version = "=1.0.204", features = ["derive"] }
# vectune = {version = "0.1.1", features = []}
# vectune = {git = "https://github.com/ClankPan/Vectune", rev = "d785917e973dbb011992ed3ee98406c707d7ca80", features = ["progress-bar"]}
vectune = {git = "https://github.com/ClankPan/Vectune", branch = "develop", features = ["progress-bar"]}
# vectune = {path = "../vectune", features = ["progress-bar"]}
serde_json = "=1.0.113"
parking_lot = {version = "=0.11.2", features = []}  # 0.12にすると、wasm-bindgenのfeatがなくなる。
rustc-hash = "=1.1.0"
byteorder = "=1.5.0"
ndarray = "=0.15.6"
bincode = "=1.3.3"

candle-core = {version = "=0.6.0", optional = true}
candle-nn = {version = "=0.6.0", optional = true}
candle-transformers = {version = "=0.6.0", optional = true}
num-traits = {version = "=0.2.17", optional = true}
tokenizers = {version = "=0.20.0", features = ["unstable_wasm"], default-features = false, optional = true}


[features]
simd-l1 = []
cos-sim = []
debug = []
wasm-bindgen = ["parking_lot/wasm-bindgen", "vectune/wasm-bindgen"]
embedding-command = ["candle-core", "candle-nn", "candle-transformers", "num-traits", "tokenizers"]